# algorist

./: .gitignore  CMakeLists.txt  README.md
doc/input/: coin.txt  input_10.txt  input_10k.txt  input_foo.txt
doc/output/: output_10.txt  output_10k.txt
include/: list.h  queue.h
src/dp/: coinchange.c  fib.c
src/graph/: graph.c
src/shared/: list.c  queue.c  queue.h
src/sorting/: a.out  bubble.c  heap.c  insert.c  merge.c  quick.c  select.c  selection.c
src/sorting/input/: input_10k.txt
src/sorting/output/: output_10.txt
test/: CMakeLists.txt  listtest.c
