cmake_minimum_required (VERSION 2.6)
project (Algorist)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories(include)

add_library(shared src/shared/queue.c)
add_executable(bubble src/sorting/bubble.c)
add_executable(heap src/sorting/heap.c)
add_executable(insert src/sorting/insert.c)
add_executable(merge src/sorting/merge.c)
add_executable(quick src/sorting/quick.c)
add_executable(select src/sorting/select.c)